make it server like

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
           <div class="left">
-            <li><a class="active" href="/">HOME</a></li>
-            <li><a href="/cart">CART</a></li>
+            <li><a class="active" href="./">HOME</a></li>
+            <li><a href="./cart">CART</a></li>
           </div>
           <div id="loginRegister" class="right">
           </div>
