--- a/public/html/register.html
+++ b/public/html/register.html
@@ -10,8 +10,8 @@
       <nav>
         <ul>
             <div class="left">
-              <li><a class="active" href="/">HOME</a></li>
-              <li><a href="/cart">CART</a></li>
+              <li><a href="./">HOME</a></li>
+              <li><a href="./cart">CART</a></li>
             </div>
             <div id="loginRegister" class="right">
             </div>
